-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 23
-
Component/s: hotspot
-
b26
Test: applications/javafuzzer/BigTest.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\\sb\\prod\\1716926873\\workspace\\open\\src\\hotspot\\share\\opto\\loopTransform.cpp:1209), pid=16684, tid=49432
# assert(bol->is_Opaque4() || bol->is_OpaqueInitializedAssertionPredicate()) failed: Opaque node of non-null-check or of Initialized Assertion Predicate
#
# JRE version: Java(TM) SE Runtime Environment (23.0+25) (fastdebug build 23-ea+25-2073)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+25-2073, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\\sb\\prod\\1716926873\\workspace\\open\\src\\hotspot\\share\\opto\\loopTransform.cpp:1209), pid=16684, tid=49432
# assert(bol->is_Opaque4() || bol->is_OpaqueInitializedAssertionPredicate()) failed: Opaque node of non-null-check or of Initialized Assertion Predicate
#
# JRE version: Java(TM) SE Runtime Environment (23.0+25) (fastdebug build 23-ea+25-2073)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+25-2073, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
- relates to
-
JDK-8330386 Replace Opaque4Node of Initialized Assertion Predicate with new OpaqueInitializedAssertionPredicateNode
-
- Resolved
-